force-app/main/default/objects/LilIy_Investigator_Init_Study_Request__c/LilIy_Investigator_Init_Study_Request__c.object-meta.xml
<CustomObject>
    <label>Investigator Initiated Study Request</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Investigator Initiated Study Request Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigator Initiated Study Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>