force-app/main/default/objects/LilIy_Investigator_Init_Study_Request__c/fields/LilIy_Investigator_HCP_Name__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Investigator_HCP_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigator/HCP Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Investigator Initiated Study Requests</relationshipLabel>
    <relationshipName>Investigator_Initiated_Study_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>