force-app/main/default/objects/LilIy_Investigator_Init_Study_Request__c/fields/LilIy_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Request_Date__c</fullName>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>