force-app/main/default/objects/LilIy_Investigator_Init_Study_Request__c/fields/LilIy_Research_Questions__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Research_Questions__c</fullName>
    <label>Research Questions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>