force-app/main/default/objects/LilIy_Investigator_Init_Study_Request__c/fields/LilIy_Scope_Details_notes__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Scope_Details_notes__c</fullName>
    <label>Scope Details (notes)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>