force-app/main/default/objects/LilIy_Investigator_Init_Study_Request__c/fields/LilIy_Study_Concept__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Study_Concept__c</fullName>
    <label>Study Concept</label>
    <type>TextArea</type>
</CustomField>