force-app/main/default/objects/LilIy_Investigator_Init_Study_Request__c/fields/LilIy_Study_Type__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Study_Type__c</fullName>
    <label>Study Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Non-Clinical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>