force-app/main/default/objects/LilIy_Investigator_Init_Study_Request__c/fields/OfflineCreatedByID__c.field-meta.xml
<CustomField>
    <fullName>OfflineCreatedByID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offline Created By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Investigator_Initiated_Study_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>