force-app/main/default/objects/LilIy_Investigator_Init_Study_Request__c/fields/OfflineLastModifiedByID__c.field-meta.xml
<CustomField>
    <fullName>OfflineLastModifiedByID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offline Last Modified By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Investigator_Initiated_Study_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>