force-app/main/default/objects/LilIy_Investigator_Init_Study_Request__c/fields/OfflineUniqueID__c.field-meta.xml
<CustomField>
    <fullName>OfflineUniqueID__c</fullName>
    <label>Offline Unique ID</label>
    <type>TextArea</type>
</CustomField>