force-app/main/default/objects/LilIy_Investigator_Init_Study_Request__c/fields/Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reject_Reason__c</fullName>
    <label>Reject Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>