force-app/main/default/objects/LilIy_Investigator_Init_Study_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LilIy_Study_Concept__c</columns>
    <columns>LilIy_Study_Type__c</columns>
    <columns>LilIy_Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LilIy_Request_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>